--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,17 @@
 {
-    "name": "infinety-es/nova-filemanager",
+    "name": "web-id/nova-filemanager",
     "description": "Filemanager tool for Laravel Nova",
     "keywords": [
         "laravel",
         "nova",
         "filemanager"
     ],
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../../nova"
-        }
-    ],
-    "homepage": "https://github.com/krato/nova-filemanager",
     "license": "MIT",
     "authors": [
         {
-            "name": "Eric Lagarda",
-            "email": "eric@infinety.es",
+            "name": "Léo TIOLLIER",
+            "email": "leo@web-id.fr",
             "role": "Developer"
-        },
-        {
-            "name": "InfinetyEs",
-            "email": "apps@infinety.es",
-            "role": "Maintainer"
         }
     ],
     "require": {
@@ -36,18 +24,18 @@
     },
     "autoload": {
         "psr-4": {
-            "Infinety\\Filemanager\\": "src/"
+            "WebId\\Filemanager\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Infinety\\Filemanager\\Tests\\": "tests"
+            "WebId\\Filemanager\\Tests\\": "tests"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Infinety\\Filemanager\\FilemanagerServiceProvider"
+                "WebId\\Filemanager\\FilemanagerServiceProvider"
             ]
         }
     },
