--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "v-copy": "^0.1.0",
         "vue": "^2.5.0",
         "vue-codemirror": "^4.0.5",
+        "vue-drag-drop": "^1.1.4",
         "vue-plyr": "^4.0.0",
         "vue2-dropzone": "^3.2.2"
     }
