--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "filesize": "^3.6.1",
         "laravel-nova": "^1.0.2",
         "liquor-tree": "^0.2.32",
+        "lodash": "^4.17.11",
         "plyr": "^3.4.3",
         "urijs": "^1.19.1",
         "v-copy": "^0.1.0",
